--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ keywords = ["postgres", "tsquery", "sqlalchemy", "full text search"]
 
 [tool.poetry.dependencies]
 python = "^3.6.15"
-sqlalchemy = "^1.3"
+sqlalchemy = "~1.3.24 || ~1.4.35"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
@@ -20,6 +20,8 @@ ptpython = "^3.0.20"
 psycopg2 = "^2.9"
 pytest = "^5.2"
 pytest-sqlalchemy = "^0.2"
+tox = "^3.25.0"
+tox-asdf = "^0.1.0"
 
 [tool.black]
 target-version = ['py36']
