--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ keywords = ["postgres", "tsquery", "sqlalchemy", "full text search"]
 
 [tool.poetry.dependencies]
 python = "^3.6.15"
-sqlalchemy = "~1.3.24 || ~1.4.35"
+sqlalchemy = "^1.3.24"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
